# Robotics-Project

./: .gitignore  README.md
Lab summary/: L10.txt  L1_yt.txt  L2.txt  L3.txt  L4.txt  L5.txt  L6.txt  L7.txt  L8.txt  L9.txt
robotics/docker/: Dockerfile  build.sh  run_docker.sh  run_docker_pc1.sh  run_docker_pc2.sh  run_docker_vnc.sh  run_vnc.sh
robotics/src/: tmuxconf.sh
robotics/src/asynch/src/: asynch_sub.cpp  pub.cpp  standard_sub.cpp
robotics/src/custom_messages/: CMakeLists.txt
robotics/src/custom_messages/src/: pub.cpp  sub.cpp
robotics/src/demo_mapping/config/: mapper_params_online_async.yaml  mapper_params_online_async_localization.yaml
robotics/src/demo_mapping/launch/: gmapping.launch  slam_toolbox_localization.launch
robotics/src/fibonacci/action/: Fibonacci.action
robotics/src/fibonacci/src/: fibonacci_client.cpp  fibonacci_client2.cpp  fibonacci_server.cpp
robotics/src/first_project/: CMakeLists.txt  README.txt  info.txt  package.xml
robotics/src/first_project/cfg/: parameters.cfg
robotics/src/first_project/launch/: launch.launch
robotics/src/first_project/rviz/: config_file.rviz
robotics/src/first_project/src/: gps_to_odom.cpp  lidar_remap.cpp  odom_to_tf.cpp
robotics/src/message_filters/src/: pub.cpp  sub.cpp  sub_pol.cpp
robotics/src/nav2d_conf/cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
robotics/src/nav2d_conf/launch/: amcl.launch.xml  gmapping.launch.xml  turtlebot_amcl.launch
robotics/src/nodelet_example/launch/: launch.launch
robotics/src/parameter_test/: CMakeLists.txt
robotics/src/parameter_test/cfg/: parameters.cfg
robotics/src/parameter_test/src/: param_first.cpp  (+1 more)
robotics/src/pub_sub/: CMakeLists.txt  package.xml
robotics/src/pub_sub/launch/: multi_turtle.launch
robotics/src/pub_sub/src/: pub.cpp  sub.cpp
robotics/src/second_project/: CMakeLists.txt  package.xml  waypoints.csv
robotics/src/service/: CMakeLists.txt
robotics/src/stage/: maze.world  turtlebot.inc
(+28 files in other folders)
